--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500&display=swap" rel="stylesheet">
     <title>Spotify Web</title>
 </head>
 <body>
@@ -16,7 +16,30 @@
     <!-- MAIN -->
     <main class="content">
         
-        <aside class="sx-utility"></aside>
+        <aside class="sx-utility">
+            <div class="logo">
+                <a class="big-logo" href=""><img src="./img/logo.svg" alt="logo spotify"></a>
+                <a class="small-logo" href=""><img src="./img/logo-small.svg" alt="logo"></a>
+            </div>
+            <div class="text-aside">
+                <div class="nav-list">
+                    <ul>
+                        <li>
+                            <a href=""><img class="icon-list" src="./img/home.svg" alt="home"></a>
+                            <span>Home</span>
+                        </li>
+                        <li>
+                            <a href=""><img class="icon-list" src="./img/search.svg" alt="cerca"></a>
+                            <span>Cerca</span>
+                        </li>
+                        <li>
+                            <a href=""><img class="icon-list" src="./img/libreria.svg" alt="libreria"></a>
+                            <span>La tua libreria</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </aside>
         <div class="main-content">
             <div class="pro"></div>
 
