--- a/index.html
+++ b/index.html
@@ -11,48 +11,49 @@
     <!-- MAIN -->
     <main class="content">
         <aside class="sx-utility">
-            <div class="logo">
+          <div>
+            <div class="logo padding-aside">
                 <a class="big-logo" href=""><img src="./img/logo.svg" alt="logo spotify"></a>
                 <a class="small-logo" href=""><img src="./img/logo-small.svg" alt="logo"></a>
             </div>
             <div class="text-aside">
                 <div class="nav-list">
                     <ul>
-                        <li>
+                        <li class="padding-aside home-border">
                             <a href=""><img class="icon-list" src="./img/home.svg" alt="home"></a>
                             <span>Home</span>
                         </li>
-                        <li>
+                        <li class="padding-aside">
                             <a href=""><img class="icon-list" src="./img/search.svg" alt="cerca"></a>
                             <span>Cerca</span>
                         </li>
-                        <li>
+                        <li class="padding-aside">
                             <a href=""><img class="icon-list" src="./img/libreria.svg" alt="libreria"></a>
                             <span>La tua libreria</span>
                         </li>
                     </ul>
                 </div>
-                <div class="playlist">
+                <div class="playlist padding-aside">
                     <h3>PLAYLIST</h3>
                     <a href=""><i class="fa-regular fa-square-plus"></i>Crea playlist</a>
                     <div class="nome-playlist">
                         <ul>
-                            <li><a href="">Nome Playlist</a></li>
-                            <li><a href="">Nome Playlist</a></li>
-                            <li><a href="">Nome Playlist</a></li>
-                            <li><a href="">Nome Playlist</a></li>
-                            <li><a href="">Nome Playlist</a></li>
-                            <li><a href="">Nome Playlist</a></li>
-                            <li><a href="">Nome Playlist</a></li>
+                            <li><a href=""><h4>Nome Playlist</h4></a></li>
+                            <li><a href=""><h4>Nome Playlist</h4></a></li>
+                            <li><a href=""><h4>Nome Playlist</h4></a></li>
+                            <li><a href=""><h4>Nome Playlist</h4></a></li>
+                            <li><a href=""><h4>Nome Playlist</h4></a></li>
+                            <li><a href=""><h4>Nome Playlist</h4></a></li>
+                            <li><a href=""><h4>Nome Playlist</h4></a></li>
                         </ul>
                     </div>
                 </div>
             </div>
-
-            <div class="aside-bottom">
+          </div>
+            <div class="aside-bottom padding-aside">
                 <div class="app">
-                    <a href=""><i class="fa-solid fa-circle-arrow-down"></i></a>
-                    <a href=""><span>Installa app</span></a>
+                    <a href=""><i class="fa-regular fa-circle-down"></i></a>
+                    <a href=""><span><strong>Installa app</strong></span></a>
                 </div>
                 <div class="hr-sidebar"><hr></div>
                 <div class="profile">
@@ -65,58 +66,68 @@
         </aside>
         <div class="main-content">
             <div class="pro">
-                <div class="upgrade">EFFETTUA L'UPGRADE</div>
+                <div class="upgrade"><strong>EFFETTUA L'UPGRADE</strong></div>
             </div>
 
             <div class="nav">
                 <nav>
                     <ul class="nav-list-main">
-                        <li>IN EVIDENZA</li>
-                        <li>PODCATST</li>
-                        <li>CLASSIFICHE</li>
-                        <li>GENERI E MOOD</li>
-                        <li>NUOVE USCITE</li>
-                        <li>SCOPRI</li>
+                        li><h4>IN E<span class="line">VIDE</span>NZA</h4></li>
+                        <li><h4>PODCAST</h4></li>
+                        <li><h4>CLASSIFICHE</h4></li>
+                        <li><h4>GENERI E MOOD</h4></li>
+                        <li><h4>NUOVE USCITE</h4></li>
+                        <li><h4>SCOPRI</h4></li>
                     </ul>
                 </nav>
             </div>
 
             <section class="recently-played">
                 <h3>Recently Played</h3>
-                <div class="play d-flex">
+                <div class="play d-flex responsive">
                     <div class="card">
                         <img src="./img/metal_lifting.jpg" alt="metal music">
                         <div class="text">
                             <h4>Heavy Metal</h4>
-                            <p>Subtitle</p>
+                            <p><strong>Subtitle</strong></p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="img/stranger.jpeg" alt="stranger things">
+                        <div class="card">
+                            <i class="fa-regular fa-circle-play"></i>
+                        </div>
+                        <div class="text"> 
+                            <h4>Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h4>
+                            <p><strong>Kyle Dixon & Michael Stein</strong></p>
                         </div>
                     </div>
                     <div class="card">
                         <img src="./img/aquietplace.jpeg" alt="a quiet place">
                         <div class="text">
                             <h4>A quiet place</h4>
-                            <p>Subtitle</p>
+                            <p><strong>Subtitle</strong></p>
                         </div>
                     </div>
                     <div class="card">
                         <img src="./img/split.jpeg" alt="split">
                         <div class="text">
                             <h4>Split</h4>
-                            <p>Subtitle</p>
+                            <p><strong>Subtitle</strong></p>
                         </div>
                     </div>
                     <div class="card">
                         <img src="./img/cure.jpeg" alt="a cure of wellness">
                         <div class="text">
                             <h4>A cure of wellness</h4>
-                            <p>Subtitle</p>
+                            <p><strong>Subtitle</strong></p>
                         </div>
                     </div>
                     <div class="card">
                         <img src="./img/sinister.jpeg" alt="sinister">
                         <div class="text">
                             <h4>Sinister</h4>
-                            <p>Subtitle</p>
+                            <p><strong>Subtitle</strong></p>
                         </div>
                     </div>
                 </div>
@@ -124,6 +135,7 @@
             
             <section class="recently-played">
                 <h3>Creato per John Doe</h3>
+                <p class="ascolti"><strong>Più ascolti, più accurati saranno i suggerimenti.</strong></p>
                 <div class="play d-flex">
                     <div class="card">
                         <img src="./img/radar.jpeg" alt="radar">
@@ -142,6 +154,7 @@
             
             <section class="recently-played">
                 <h3>Artisti più popolari</h3>
+                <p class="ascolti"><strong>Più ascolti, più accurati saranno i suggerimenti.</strong></p>
                 <div class="play d-flex">
                     <div class="card">
                         <img class="radius" src="./img/youg.jpeg" alt="lana del rey">
@@ -177,29 +190,40 @@
         </div>
 
         <div class="play-center">
-            <div class="action-music d-flex">
-                <ul>
+            <div>
+                <ul class="flex list-foot actions-music">
                     <li><i class="fa-solid fa-shuffle"></i></li>
                     <li><i class="fa-solid fa-backward-step"></i></li>
-                    <li><i class="fa-regular fa-circle-paly"></i></li>
+                    <li><i class="fa-regular fa-circle-play"></i></li>
                     <li><i class="fa-solid fa-farward-step"></i></li>
                     <li><i class="fa-solid fa-rotate-right"></i></li>
                 </ul>
             </div>
             <div class="time-music">
                 <div class="time">0:25</div>
-                <div class="bar-music"><hr></div>
+                <div class="bar-music">
+                    <div class="progress-bar">
+                        <div class="dor-bar"></div>
+                    </div>
+                </div>
                 <div class="time-music">4:35</div>
             </div>
         </div>
 
         <div class="footer-right">
-            <ul class="d-flex">
+            <ul class="flex list-foot">
                 <li><i class="fa-solid fa-list-ul"></i></li>
                 <li><i class="fa-solid fa-desktop"></i></li>
                 <li><i class="fa-solid fa-volume-high"></i></li>
+                <li>
+                    <div class="bar-music">
+                        <div class="progress-bar">
+                            <div class="dor-bar"></div>
+                        </div>
+                    </div>
+                </li>
             </ul>
-            <div class="bar-audio"></div>
+            <div class="bar-audio"></div> 
         </div>
     </footer>
     <!-- /FOOTER -->
