hover added-end exercise

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="nav">
                 <nav>
                     <ul class="nav-list-main">
-                        li><h4>IN E<span class="line">VIDE</span>NZA</h4></li>
+                        <li><h4>IN E<span class="line">VIDE</span>NZA</h4></li>
                         <li><h4>PODCAST</h4></li>
                         <li><h4>CLASSIFICHE</h4></li>
                         <li><h4>GENERI E MOOD</h4></li>
